--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, intial scale-1">
-    <meta name="author" content="Sukhjinder Singh">
+    <meta name="author" content="Gurjashan singh">
     <meta name="description" content="Project">
     <meta name="keywords" content="Assignment, project">
-    <title>Shape Factory</title>
+    <title>Password strength checker</title>
     <link rel="icon" href="./assets/img/icon.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
